--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,11 +67,11 @@ footer {
 .flexContainer {
     display: flex;
     flex-wrap: wrap;
-    background-color: #FFFFFF;
+    background-color: #fa9f9f;
     margin-left: 10%;
     margin-right: 10%;
     justify-content: space-evenly;
-    max-width: 1200px;
+    max-width: 1100px;
     justify-self: center;
 }
 .flexContainer > div {
@@ -84,16 +84,18 @@ footer {
 .workGrid {
     display: grid;
     margin-left: 10%;
-    max-width: 1200px;
+    max-width: 1100px;
     margin-right: 10%;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
     /* justify-content: space-evenly; */
-    background-color: #FFFFFF;
+    background-color: #c00404;
+    justify-self: center;
 }
 .workGrid > div {
     margin: 5%;
     padding: 10px;
-    max-width: 600px;
+    /* max-width: 600px; */
     background-color: rgb(255, 255, 255);
     text-align: left;
     justify-content: center;
